# gahm

./: .codecov.yml  .gitignore  Assumption_8cpp.html  Assumption_8cpp__incl.map  Assumption_8cpp__incl.md5  Assumption_8h.html  Assumption_8h__dep__incl.map  Assumption_8h__dep__incl.md5  Assumption_8h__incl.map  Assumption_8h__incl.md5  Assumption_8h_source.html  Assumptions_8cpp.html  Assumptions_8cpp__incl.map  Assumptions_8cpp__incl.md5  Assumptions_8h.html  Assumptions_8h.js  Assumptions_8h__dep__incl.map  Assumptions_8h__dep__incl.md5  Assumptions_8h__incl.map  Assumptions_8h__incl.md5  Assumptions_8h_source.html  AtcfLine_8cpp.html  AtcfLine_8cpp.js  AtcfLine_8cpp__incl.map  AtcfLine_8cpp__incl.md5  AtcfLine_8h.html  AtcfLine_8h.js  AtcfLine_8h__dep__incl.map  AtcfLine_8h__dep__incl.md5  AtcfLine_8h__incl.map  AtcfLine_8h__incl.md5  AtcfLine_8h_source.html  Atcf_8cpp.html  Atcf_8cpp__incl.map  Atcf_8cpp__incl.md5  Atcf_8h.html  Atcf_8h__dep__incl.map  Atcf_8h__dep__incl.md5  Atcf_8h__incl.map  Atcf_8h__incl.md5  (+1010 more)
.circleci/: config.yml
.github/workflows/: python_package.yaml  testing.yaml
benchmark/: CMakeLists.txt  gahm_benchmark.cpp
cmake/: CompilerWarnings.cmake  benchmark.cmake  python.cmake  python_gahm.cmake  test_cases.cmake
dev/bench/: data.js
examples/: ex1_katrina.py  ex2_windprofile.py
fuzz/: CMakeLists.txt  FUZZ_Atcf.cpp
interfaces/: gahm.F90  gahm_fortran.cpp
interfaces/fortran/: gahm_fortran.cpp
interfaces/python/: gahm.i
m4/: libtool.m4  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  (+65 more)
src/: Assumption.cpp  Assumption.h  Assumptions.cpp  Assumptions.h  Atcf.cpp  Atcf.h  AtcfLine.cpp  AtcfLine.h  Atmospheric.cpp  Atmospheric.h  CMakeLists.txt  CircularArray.h  Constants.h  Date.cpp  Date.h  FastMath.cpp  FastMath.h  ForecastPeriod.cpp  ForecastPeriod.h  Gahm.cpp  Gahm.h  GahmEquations.cpp  GahmEquations.h  GahmRadiusSolver.cpp  GahmRadiusSolver.h  GahmRadiusSolverPrivate.cpp  GahmRadiusSolverPrivate.h  GahmSolution.h  GahmSolutionPoint.h  GahmSolutionState.cpp  GahmSolutionState.h  GahmSolver.cpp  GahmSolver.h  GahmState.cpp  GahmState.h  GahmVortex.cpp  GahmVortex.h  Geometry.h  HurricanePressure.cpp  HurricanePressure.h  (+41 more)
src/atcf/: AtcfFile.cpp  AtcfFile.h  AtcfIsotach.h  AtcfQuadrant.h  AtcfSnap.cpp  AtcfSnap.h  StormPosition.h  StormTranslation.h
src/datatypes/: CircularArray.h  Date.cpp  Date.h  Point.h  PointCloud.h  PointPosition.h  Uvp.h  VortexSolution.h  WindGrid.h
src/fortran/: gahm.F90  gahm_fortran.cpp
src/gahm/: GahmEquations.cpp  GahmEquations.h  GahmRadiusSolver.cpp  GahmRadiusSolver.h  GahmRadiusSolverPrivate.cpp  GahmRadiusSolverPrivate.h  GahmSolver.cpp  GahmSolver.h
src/output/: OutputFile.h  OwiOutput.cpp  OwiOutput.h
src/physical/: Atmospheric.h  Constants.h  Earth.h  Units.h
src/preprocessor/: Preprocessor.cpp  Preprocessor.h
src/swig/: CMakeLists.txt  gahm.i  init_py.default
src/util/: Interpolation.h  StringUtilities.h
src/vortex/: Vortex.cpp  Vortex.h
src/vortex/back/: Vortex.cpp  Vortex.h
swig/: gahm.i
test/cxx_tests/: test.cpp
testing/cxx/: cxx_atcf.cpp  cxx_owi.cpp  cxx_physical.cpp  cxx_test01.cpp
testing/python/: python_test.py
testing/test_cases/: catch_boilerplate.cpp  cxx_atcf.cpp  cxx_benchmark.cpp  cxx_owi.cpp  cxx_physical.cpp  ftn_gahm.f90
tests/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt
tests/cxx_tests/: TEST_Atcf.cpp  TEST_CircularArray.cpp  TEST_OutputFormats.cpp  TEST_Physical.cpp  TEST_Preprocessor.cpp  TEST_Vortex.cpp
tests/fortran_tests/: TEST_VortexFortran.F90
tests/fuzz/: CMakeLists.txt  FUZZ_Atcf.cpp
